<resources>
    <string name="app_name">Github User</string>
    <string name="bottom_nav_txt_01">Home</string>
    <string name="bottom_nav_txt_02">Explore</string>
    <string name="bottom_nav_txt_03">Profile</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="temp_name">Name here…</string>
    <string name="temp_username">myusername</string>
    <string name="temp_company">My Company</string>
    <string name="temp_link">link.com</string>
    <string name="temp_location">My Location</string>
    <string name="temp_follow">10</string>
    <string name="follower">Followers</string>
    <string name="following">Followings</string>
    <string name="popular">Popular</string>
    <string name="temp_repo_name">Repo Name</string>
    <string name="temp_repo_detail">Repository Details here</string>
    <string name="temp_number">0</string>
    <string name="temp_category_name">Category Name</string>
    <string name="repositories">Repositories</string>
    <string name="organizations">Organizations</string>
    <string name="starred">Starred</string>
    <string name="explore">Explore</string>
    <string name="all_users">All Users</string>
    <string name="discover">Discover</string>
    <string name="follow">Follow</string>
    <string name="details">Details</string>
    <string name="myemail_gmail_com">myemail@gmail.com</string>
    <string name="contributors">Contributors</string>
    <string name="favorites">Favorites</string>
    <string name="favorite_detail">Add favorite repositories for quick access at any time, without having to search</string>
    <string name="add_repositories">Add Repositories</string>
    <string name="my_work">My Work</string>
    <string name="issues">Issues</string>
    <string name="discussions">Discussions</string>

    <!-- Other string resources-->
    <string-array name="username">
        <item>JakeWharton</item>
        <item>amitshekhariitbhu</item>
        <item>romainguy</item>
        <item>chrisbanes</item>
        <item>tipsy</item>
        <item>ravi8x</item>
        <item>jasoet</item>
        <item>budioktaviyan</item>
        <item>hendisantika</item>
        <item>sidiqpermana</item>
        <item>patriciafiona</item>
    </string-array>

    <string-array name="name">
        <item>Jake Wharton</item>
        <item>Amit Shekhar</item>
        <item>Romain Guy</item>
        <item>Chris Banes</item>
        <item>David</item>
        <item>Ravi Tamada</item>
        <item>Deny Prasetyo</item>
        <item>Budi Oktaviyan</item>
        <item>Hendi Santika</item>
        <item>Sidiq Permana</item>
        <item>Patricia Fiona</item>
    </string-array>

    <string-array name="email">
        <item>jakeWharton@gmail.com</item>
        <item>amitshekhariitbhu@gmail.com</item>
        <item>romainguy@gmail.com</item>
        <item>chrisbanes@gmail.com</item>
        <item>tipsy@gmail.com</item>
        <item>ravi8x@gmail.com</item>
        <item>jasoet@gmail.com</item>
        <item>budioktaviyan@gmail.com</item>
        <item>hendisantika@gmail.com</item>
        <item>sidiqpermana@gmail.com</item>
        <item>patriciafiona3@gmail.com</item>
    </string-array>

    <string-array name="location">
        <item>Pittsburgh, PA, USA</item>
        <item>New Delhi, India</item>
        <item>California</item>
        <item>Sydney, Australia</item>
        <item>Trondheim, Norway</item>
        <item>India</item>
        <item>Kotagede, Yogyakarta, Indonesia</item>
        <item>Jakarta, Indonesia</item>
        <item>Bojongsoang - Bandung Jawa Barat</item>
        <item>Jakarta Indonesia</item>
        <item>Jakarta, Indonesia</item>
    </string-array>

    <string-array name="repository">
        <item>102</item>
        <item>37</item>
        <item>9</item>
        <item>30</item>
        <item>56</item>
        <item>28</item>
        <item>44</item>
        <item>110</item>
        <item>1064</item>
        <item>65</item>
        <item>37</item>
    </string-array>

    <string-array name="starred">
        <item>19</item>
        <item>8</item>
        <item>6</item>
        <item>20</item>
        <item>18</item>
        <item>12</item>
        <item>9</item>
        <item>11</item>
        <item>33</item>
        <item>22</item>
        <item>7</item>
    </string-array>

    <string-array name="company">
        <item>Google, Inc.</item>
        <item>MindOrksOpenSource</item>
        <item>Google</item>
        <item>Google working on @android</item>
        <item>Working Group Two</item>
        <item>AndroidHive | Droid5</item>
        <item>gojek-engineering</item>
        <item>KotlinID</item>
        <item>JVMDeveloperID @KotlinID @IDDevOps</item>
        <item>Nusantara Beta Studio</item>
        <item>Kalbis Institute &amp; Nanjing Xiaozhuang University</item>
    </string-array>

    <string-array name="link">
        <item>https://www.linkedin.com/in/JakeWharton/</item>
        <item>https://www.linkedin.com/in/amitshekhariitbhu/</item>
        <item>https://www.linkedin.com/in/romainguy/</item>
        <item>https://www.linkedin.com/in/chrisbanes/</item>
        <item>https://www.linkedin.com/in/tipsy/</item>
        <item>https://www.linkedin.com/in/ravi8x/</item>
        <item>https://www.linkedin.com/in/jasoet/</item>
        <item>https://www.linkedin.com/in/budioktaviyan/</item>
        <item>https://www.linkedin.com/in/hendisantika/</item>
        <item>https://www.linkedin.com/in/sidiqpermana/</item>
        <item>https://www.linkedin.com/in/patricia-fiona-6132861a3/</item>
    </string-array>

    <string-array name="followers">
        <item>56995</item>
        <item>5153</item>
        <item>7972</item>
        <item>14725</item>
        <item>788</item>
        <item>18628</item>
        <item>277</item>
        <item>178</item>
        <item>428</item>
        <item>465</item>
        <item>2</item>
    </string-array>

    <string-array name="following">
        <item>12</item>
        <item>2</item>
        <item>0</item>
        <item>1</item>
        <item>0</item>
        <item>3</item>
        <item>39</item>
        <item>23</item>
        <item>61</item>
        <item>10</item>
        <item>3</item>
    </string-array>

    <string-array name="avatar">
        <item>@drawable/user1</item>
        <item>@drawable/user2</item>
        <item>@drawable/user3</item>
        <item>@drawable/user4</item>
        <item>@drawable/user5</item>
        <item>@drawable/user6</item>
        <item>@drawable/user7</item>
        <item>@drawable/user8</item>
        <item>@drawable/user9</item>
        <item>@drawable/user10</item>
        <item>@drawable/patriciafiona</item>
    </string-array>

    <string-array name="background">
        <item>https://cdn.dribbble.com/users/1456628/screenshots/10864000/media/764d5c1b4ead8a379c826bfca47edfed.png?compress=1&amp;resize=1000x750</item>
        <item>https://cdn.dribbble.com/users/427857/screenshots/15280261/media/6148d5ec28ad870f429df67e205ff73c.png?compress=1&amp;resize=1000x750</item>
        <item>https://cdn.dribbble.com/users/1037/screenshots/15277036/media/8e349532be1227f3dae4f9c753dc4d66.png?compress=1&amp;resize=1000x750</item>
        <item>https://cdn.dribbble.com/users/2408492/screenshots/15280206/media/59abc712eb5c08a297f6052dbaacd044.png?compress=1&amp;resize=1000x750</item>
        <item>https://cdn.dribbble.com/users/4107199/screenshots/15278963/media/b3dd0b5cec5f192f6d7cd559352e80d9.jpg?compress=1&amp;resize=1000x750</item>
        <item>https://cdn.dribbble.com/users/1620444/screenshots/15280328/media/426113ffd819517ad0df87884caacafa.png?compress=1&amp;resize=1000x750</item>
        <item>https://cdn.dribbble.com/users/275590/screenshots/15277341/media/7b753cee53f3c7a377022a65d909d806.jpg?compress=1&amp;resize=1000x750</item>
        <item>https://cdn.dribbble.com/users/944871/screenshots/15280187/media/d59a4067901ff6fbdef6b146d46994eb.png?compress=1&amp;resize=1000x750</item>
        <item>https://cdn.dribbble.com/users/1200499/screenshots/15279989/dr-6.jpg?compress=1&amp;resize=800x600</item>
        <item>https://cdn.dribbble.com/users/1034014/screenshots/15273754/media/e17f03732ae512425e8b073573c820ea.png?compress=1&amp;resize=1000x750</item>
        <item>https://cdn.dribbble.com/users/3467254/screenshots/15278242/media/03e61830ccbf1826f40052a98d650572.jpg?compress=1&amp;resize=1000x750</item>
    </string-array>

</resources>


