<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/grey_200"
    tools:context=".Fragments.ProfileFragment">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <!-- My Github Detail -->
            <androidx.cardview.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:cardElevation="4dp">

                <androidx.constraintlayout.widget.ConstraintLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:paddingTop="30dp"
                    android:paddingBottom="20dp"
                    android:paddingHorizontal="20dp">

                    <de.hdodenhof.circleimageview.CircleImageView
                        android:id="@+id/myAvatar"
                        style="@style/ItemRowAvatar"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent" />

                    <TextView
                        android:id="@+id/myName"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="15dp"
                        android:ellipsize="end"
                        android:maxLines="1"
                        android:text="@string/temp_name"
                        android:textColor="@color/black"
                        android:textSize="20sp"
                        android:textStyle="bold"
                        app:layout_constraintStart_toEndOf="@+id/myAvatar"
                        app:layout_constraintTop_toTopOf="parent"
                        app:layout_constraintWidth_percent="0.7" />

                    <TextView
                        android:id="@+id/myUsername"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="15dp"
                        android:ellipsize="end"
                        android:maxLines="1"
                        android:text="@string/temp_username"
                        android:textColor="@color/grey_700"
                        android:textSize="14sp"
                        app:layout_constraintStart_toEndOf="@+id/myAvatar"
                        app:layout_constraintTop_toBottomOf="@+id/myName"
                        app:layout_constraintWidth_percent="0.7" />

                    <ImageView
                        android:id="@+id/icon_d_01"
                        style="@style/DetailUserIcon"
                        android:layout_marginTop="16dp"
                        android:src="@drawable/ic_baseline_business_24"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toBottomOf="@+id/myUsername" />

                    <TextView
                        android:id="@+id/myCompany"
                        style="@style/DetailUserTxt"
                        android:layout_marginStart="8dp"
                        android:layout_marginTop="16dp"
                        android:text="@string/temp_company"
                        app:layout_constraintStart_toEndOf="@+id/icon_d_01"
                        app:layout_constraintTop_toBottomOf="@+id/myUsername" />

                    <ImageView
                        android:id="@+id/icon_d_02"
                        style="@style/DetailUserIcon"
                        android:src="@drawable/ic_baseline_location_on_24"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toBottomOf="@+id/icon_d_01" />

                    <TextView
                        android:id="@+id/myLocation"
                        style="@style/DetailUserTxt"
                        android:layout_marginStart="8dp"
                        android:layout_marginTop="8dp"
                        android:text="@string/temp_location"
                        app:layout_constraintStart_toEndOf="@+id/icon_d_02"
                        app:layout_constraintTop_toBottomOf="@+id/myCompany" />

                    <ImageView
                        android:id="@+id/icon_d_03"
                        style="@style/DetailUserIcon"
                        android:src="@drawable/ic_baseline_link_24"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toBottomOf="@+id/icon_d_02" />

                    <TextView
                        android:id="@+id/myLink"
                        style="@style/DetailUserTxt"
                        android:layout_marginStart="8dp"
                        android:layout_marginTop="8dp"
                        android:text="@string/temp_link"
                        android:autoLink="web"
                        app:layout_constraintStart_toEndOf="@+id/icon_d_03"
                        app:layout_constraintTop_toBottomOf="@+id/myLocation" />

                    <ImageView
                        android:id="@+id/icon_d_04"
                        style="@style/DetailUserIcon"
                        android:src="@drawable/ic_baseline_person_outline_24"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toBottomOf="@+id/icon_d_03" />

                    <TextView
                        android:id="@+id/myFollowers"
                        style="@style/DetailFollowNumber"
                        android:layout_marginStart="8dp"
                        app:layout_constraintStart_toEndOf="@+id/icon_d_04"
                        app:layout_constraintTop_toBottomOf="@+id/myLink" />

                    <TextView
                        android:id="@+id/textView"
                        style="@style/DetailFollowTxt"
                        android:layout_marginStart="5dp"
                        android:layout_marginEnd="5dp"
                        android:text="@string/follower"
                        app:layout_constraintEnd_toStartOf="@+id/imageView3"
                        app:layout_constraintStart_toEndOf="@+id/myFollowers"
                        app:layout_constraintTop_toBottomOf="@+id/myLink"
                        app:layout_constraintWidth_percent="0.2" />

                    <ImageView
                        android:id="@+id/imageView3"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="12dp"
                        android:src="@drawable/ic_baseline_dot_grey_10"
                        app:layout_constraintEnd_toStartOf="@+id/myFollowings"
                        app:layout_constraintStart_toEndOf="@+id/textView"
                        app:layout_constraintTop_toBottomOf="@+id/myLink" />

                    <TextView
                        android:id="@+id/myFollowings"
                        style="@style/DetailFollowNumber"
                        android:layout_marginStart="5dp"
                        app:layout_constraintStart_toEndOf="@+id/imageView3"
                        app:layout_constraintTop_toBottomOf="@+id/myLink" />

                    <TextView
                        android:id="@+id/textView2"
                        style="@style/DetailFollowTxt"
                        android:layout_marginStart="5dp"
                        android:text="@string/following"
                        app:layout_constraintStart_toEndOf="@+id/myFollowings"
                        app:layout_constraintTop_toBottomOf="@+id/myLink"
                        app:layout_constraintWidth_percent="0.2" />

                </androidx.constraintlayout.widget.ConstraintLayout>

            </androidx.cardview.widget.CardView>

            <!-- Popular and Other Section -->
            <androidx.cardview.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginVertical="10dp">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:padding="10dp">

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/popular"
                        android:textSize="18sp"
                        android:textColor="@color/black"
                        android:textStyle="bold"/>

                    <androidx.recyclerview.widget.RecyclerView
                        android:id="@+id/rv_popular_repo"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginVertical="10dp"
                        android:orientation="horizontal"
                        app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
                        tools:listitem="@layout/item_col_popular_repository" />

                    <View
                        android:layout_width="match_parent"
                        android:layout_height="1.5dp"
                        android:layout_marginVertical="10dp"
                        android:background="@android:color/darker_gray" />

                    <androidx.constraintlayout.widget.ConstraintLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content">

                        <ImageView
                            android:id="@+id/imageView4"
                            style="@style/PopularDetailImg"
                            app:layout_constraintWidth_percent="0.075"
                            android:background="@color/grey_900"
                            android:src="@drawable/ic_baseline_book_white_24"
                            app:layout_constraintStart_toStartOf="parent"
                            app:layout_constraintTop_toTopOf="parent" />

                        <TextView
                            android:id="@+id/textView3"
                            android:text="@string/repositories"
                            style="@style/PopularDetailText"
                            app:layout_constraintStart_toEndOf="@+id/imageView4"
                            app:layout_constraintTop_toTopOf="parent"
                            app:layout_constraintWidth_percent="0.8" />

                        <TextView
                            android:id="@+id/myRepository"
                            style="@style/PopularDetailNum"
                            android:text="@string/temp_number"
                            app:layout_constraintStart_toEndOf="@+id/textView3"
                            app:layout_constraintTop_toTopOf="parent"
                            app:layout_constraintWidth_percent="0.1" />

                        <ImageView
                            android:id="@+id/imageView5"
                            style="@style/PopularDetailImg"
                            android:layout_marginTop="16dp"
                            android:background="@color/orange_700"
                            android:src="@drawable/ic_baseline_business_white_24"
                            app:layout_constraintStart_toStartOf="parent"
                            app:layout_constraintTop_toBottomOf="@+id/imageView4"
                            app:layout_constraintWidth_percent="0.075" />

                        <TextView
                            android:id="@+id/textView4"
                            style="@style/PopularDetailText"
                            android:layout_marginTop="16dp"
                            android:text="@string/organizations"
                            app:layout_constraintStart_toEndOf="@+id/imageView4"
                            app:layout_constraintTop_toBottomOf="@+id/textView3"
                            app:layout_constraintWidth_percent="0.8" />

                        <TextView
                            android:id="@+id/textView6"
                            style="@style/PopularDetailNum"
                            android:layout_marginTop="16dp"
                            android:text="@string/temp_number"
                            app:layout_constraintStart_toEndOf="@+id/textView3"
                            app:layout_constraintTop_toBottomOf="@+id/myRepository"
                            app:layout_constraintWidth_percent="0.1" />

                        <ImageView
                            android:id="@+id/imageView6"
                            style="@style/PopularDetailImg"
                            android:layout_marginTop="16dp"
                            android:background="@color/yellow"
                            android:src="@drawable/ic_baseline_star_border_white_24"
                            app:layout_constraintStart_toStartOf="parent"
                            app:layout_constraintTop_toBottomOf="@+id/imageView5"
                            app:layout_constraintWidth_percent="0.075" />

                        <TextView
                            android:id="@+id/textView5"
                            style="@style/PopularDetailText"
                            android:layout_marginTop="16dp"
                            android:text="@string/starred"
                            app:layout_constraintStart_toEndOf="@+id/imageView5"
                            app:layout_constraintTop_toBottomOf="@+id/textView4"
                            app:layout_constraintWidth_percent="0.8" />

                        <TextView
                            android:id="@+id/myStarred"
                            style="@style/PopularDetailNum"
                            android:text="@string/temp_number"
                            android:layout_marginTop="16dp"
                            app:layout_constraintStart_toEndOf="@+id/textView4"
                            app:layout_constraintTop_toBottomOf="@+id/textView6"
                            app:layout_constraintWidth_percent="0.1" />

                    </androidx.constraintlayout.widget.ConstraintLayout>

                </LinearLayout>

            </androidx.cardview.widget.CardView>

        </LinearLayout>

    </ScrollView>

</FrameLayout>